--- a/client/index.html
+++ b/client/index.html
@@ -1,211 +1,258 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>Sifter</title>
+    <title>Sifter DEV</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     <!-- Le styles -->
+    <script type="text/javascript" src="jquery-latest.js"></script>
+    <script type="text/javascript" src="jquery.tablesorter.js"></script>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet"/>
     <link href="DT_bootstrap.css" rel="stylesheet"/>
     <link href="utsa.css" rel="stylesheet"/>
 
-  </head>
+</head>
 
-  <body>
-  <div class="primarycolorbg">
+<body>
+<div class="primarycolorbg">
 
-  <div class="container-fluid" >
-  <div class="row-fluid">
-    <div class="span2 secondarycolorbg">
-      <div>
-        <p>
-        <a class="secondarycolorbg" data-toggle="modal" href="#indexInfo" >Evidence <i class="icon-pencil icon-white"></i></a>
-        </p>
-      </div>
-      <div class="normalcolorbg" id="indexList">
-      </div>
-      <div>
-        <a id="refDate"></a>
-      </div>
-<!--
-      <div class="accordion-heading">
-        <p>
-        <a class="secondarycolorbg" data-toggle="modal" href="#indexEvidence" >Indexing <i class="icon-pencil icon-white"></i></a>
-        </p>
-      </div>
-      <div class="accordion-body collapse normalcolorbg">
-        Suspect2-Laptop.E01
-        <div class="progress progress-striped progress-info active">
-          <div class="bar" style="width: 40%;">
-          </div>
+<div class="container-fluid" >
+<div class="row-fluid">
+<div class="span2 secondarycolorbg">
+    <div class="sifterandtime">
+        <div>
+            <a id="sifterlogo">SIFTER</a>
         </div>
-      </div>
--->
+        <div>
+            <a id="refDate"></a>
+        </div>
+
+    </div>
+    <div>
+        <p>
+            <a id="indexcss" class="secondarycolorbg" data-toggle="modal"  href="#indexInfo" title="Open index directory">Evidence <i
+                    class="icon-hdd icon-white"></i></a>
+        </p>
     </div>
 
 
-    <div class="span10" style="background-color: white; color: black">
+    <div>
+        <a id="aboutcss" class="secondarycolorbg" data-toggle="modal" href="#aboutDlg" >About <i
+                class="icon-comment icon-white"></i></a>
+    </div>
+    <div>
+        <a id="indexlogo">LOADED DOCUMENTS</a>
+    </div>
 
-      <!-- <button id="drawSOM" class="btn" type="button">Draw</button> -->
-      <div class="offset1">
-<!--         <label for="hue">Hue</label>
-          <option value="Peaks">Assign to peaks</option>
-          <option value="Peaks">Assign to valleys</option>
-        <select id="hue">
-        </select>
-        <label for="saturation">Saturation</label>
-        <select id="saturation">
-          <option value="Magnitude-L2">Magnitude (Euclidean)</option>
-          <option value="Magnitude-L1">Magnitude (Manhattan)</option>
-          <option value="Size">Size</option>
-          <option value="Spread">Spread</option>
-        </select>
-        <label for="luminance">Luminance</label>
-        <select id="luminance">
-          <option value="Magnitude-L2">Magnitude (Euclidean)</option>
-          <option value="Magnitude-L1">Magnitude (Manhattan)</option>
-          <option value="Size">Size</option>
-          <option value="Spread">Spread</option>
-        </select>
- -->
+
+    <!--      <div class="accordion-heading">
+            <p>
+            <a class="secondarycolorbg" data-toggle="modal" href="#indexEvidence" >Indexing <i class="icon-pencil icon-white"></i></a>
+            </p>
+          </div>
+          <div class="accordion-body collapse normalcolorbg">
+            Suspect2-Laptop.E01
+            <div class="progress progress-striped progress-info active">
+              <div class="bar" style="width: 40%;">
+              </div>
+            </div>
+          </div>
+    -->
+</div>
+
+<div class="indexlistbg" id="indexList">
+</div>
+<div class="span10" style="background-color: white; color: black">
+
+    <!-- <button id="drawSOM" class="btn" type="button">Draw</button> -->
+    <div class="offset1">
+        <!--         <label for="hue">Hue</label>
+                  <option value="Peaks">Assign to peaks</option>
+                  <option value="Peaks">Assign to valleys</option>
+                <select id="hue">
+                </select>
+                <label for="saturation">Saturation</label>
+                <select id="saturation">
+                  <option value="Magnitude-L2">Magnitude (Euclidean)</option>
+                  <option value="Magnitude-L1">Magnitude (Manhattan)</option>
+                  <option value="Size">Size</option>
+                  <option value="Spread">Spread</option>
+                </select>
+                <label for="luminance">Luminance</label>
+                <select id="luminance">
+                  <option value="Magnitude-L2">Magnitude (Euclidean)</option>
+                  <option value="Magnitude-L1">Magnitude (Manhattan)</option>
+                  <option value="Size">Size</option>
+                  <option value="Spread">Spread</option>
+                </select>
+         -->
         <div style="height: 3em">
-        <span id="cell-info">Hover over cell for more information.</span>
+            <span id="cell-info">Hover over cell for more information.</span>
         </div>
         <div id="map">
         </div>
         <div>
-          <span id="map-info"></span>
+            <span id="map-info"></span>
         </div>
-      </div>
+    </div>
 
-      <form class="well form-search" id="searchQuery">
-      <input type="text" class="span8" id="searchBox"></input><button type="submit" class="btn"><i class="icon-search"></i> Search</button>
-      </form>
+    <form class="well form-search" id="searchQuery">
+        <input type="text" class="span8" id="searchBox"></input><button type="submit" class="btn"><i class="icon-search"></i> Search</button>
+    </form>
 
-      <table class="table table-bordered table-condensed" id="results">
-      <div id="controlBar" class="btn-toolbar">
-      <button class="btn disabled" id="bookmarkBtn" type="button">Bookmark</button>
-      <a class="btn disabled" id="downloadBtn" href="">Download (CSV)</a>
-      <div class="btn-group" data-toggle="buttons-radio"><button id="FilesViewBtn" class="btn" style="width: 8em;">Files</button><button id="HitsViewBtn" class="btn" style="width: 8em;">Search Hits</button></div>
-      </div>
-      <span id="searchResults" style="padding-left: 1em;">0 items.</span>
-      <span id="numSelected" style="padding-left: 1em;">0 selected.</span>
-      <thead id="resultsHeader">
-      </thead>
-      <tbody></tbody>
-      </table>
+    <table class="table table-bordered table-condensed tablesorter" id="results">
+        <div id="controlBar" class="btn-toolbar">
+            <button class="btn disabled" id="bookmarkBtn" type="button">Bookmark</button>
+            <a class="btn disabled" id="downloadBtn" href="">Download (CSV)</a>
+            <div class="btn-group" data-toggle="buttons-radio"><button id="FilesViewBtn" class="btn" style="width: 8em;">Files</button><button id="HitsViewBtn" class="btn" style="width: 8em;">Search Hits</button></div>
+        </div>
+        <span id="searchResults" style="padding-left: 1em;">0 items.</span>
+        <span id="numSelected" style="padding-left: 1em;">0 selected.</span>
+        <thead id="resultsHeader">
+        </thead>
+        <tbody></tbody>
+    </table>
 
-      <!-- body content -->
-      <div class="modal hide" id="docDisplay" tabindex="-1">
+    <!-- body content -->
+    <div class="modal hide" id="docDisplay" tabindex="-1">
         <div class="modal-header" id="docNameHeader">
         </div>
         <div class="modal-body">
-        <div id="bodyComments"></div>
-        <div id="bodyContent"></div>
+            <div id="bodyComments"></div>
+            <div id="bodyContent"></div>
         </div>
-      </div>
+    </div>
 
-      <!-- enable evidence form -->
-      <div class="modal hide" id="indexInfo" tabindex="-1">
+    <!-- enable evidence form -->
+    <div class="modal hide" id="indexInfo" tabindex="-1">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h3>Add Evidence</h3>
-          <p>Specify the path to the evidence index.</p>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h3>Add Evidence</h3>
+            <p>Specify the path to the evidence index.</p>
         </div>
         <div class="modal-body">
-          <form id="indexInfoForm">
-            <fieldset>
-              <label>Index Path</label>
-              <input type="text" class="span12" id = "indexInfoPath"/>
-            </fieldset>
-          </form>
+            <form id="indexInfoForm">
+                <fieldset>
+                    <label>Index Path</label>
+                    <input type="text" class="span12" id = "indexInfoPath"/>
+                </fieldset>
+            </form>
         </div>
         <div class="modal-footer">
-          <a href="#" class="btn" data-dismiss="modal">Cancel</a>
-          <a href="#" class="btn btn-primary" id="indexInfoOkButton">OK</a>
+            <a href="#" class="btn" data-dismiss="modal">Cancel</a>
+            <a href="#" class="btn btn-primary" id="indexInfoOkButton">OK</a>
         </div>
-      </div>
+    </div>
 
-      <!-- bookmark popup -->
-      <div class="modal hide" id="bookmarkDlg" tabindex="-1">
+    <!-- about popup -->
+    <div class="modal hide" id="aboutDlg" tabindex="-1">
         <div class="modal-header">
-          <h3>Create Bookmark</h3>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h1>Sifter
+                <img src="https://github.com/jonstewart/Sifter/blob/master/doc/smallsom.png?raw=true" alt="som" width="50" height="40"/></h1>
+            <h4>Build version: v1.0</h4>
         </div>
         <div class="modal-body">
-          <label>Comment</label>
-          <textarea type="text" name="commentText" class="span12" id="commentText"></textarea>
+            <form id="indexInfoForm">
+                <fieldset>
+
+
+                    <p>Sifter was created by:</p>
+                    <p>Dr. Nicole Beebe, nbeebe@utsa.edu, University of Texas-San Antonio</p>
+                    <p>Jon Stewart, jon@lightboxtechnologies.com, Lightbox Technologies, Inc.</p>
+
+                </fieldset>
+            </form>
         </div>
         <div class="modal-footer">
-          <a href="#" class="btn" data-dismiss="modal">Cancel</a>
-          <a href="#" class="btn btn-primary" id="bookmarkOkButton">OK</a>
+            <h6><p ALIGN=left>Copyright &copy; 2013, University of Texas at San Antonio
+                <img src="http://cias.utsa.edu/img/utsa_logo.png" alt="utsalogopic" width="50" height="40"/></p>
+            </h6>
         </div>
-      </div>
+    </div>
 
-      <!-- index evidence form -->
-      <div class="modal hide" id="indexEvidence" tabindex="-1">
+
+    <!-- bookmark popup -->
+    <div class="modal hide" id="bookmarkDlg" tabindex="-1">
         <div class="modal-header">
-          <a class="close" data-dismiss="modal">×</a>
-          <h3>Index Evidence</h3>
-          <p>Index an evidence file for searching and analysis.</p>
+            <h3>Create Bookmark</h3>
         </div>
         <div class="modal-body">
-          <form class="form-inline">
-            <fieldset>
-            <div class="control-group">
-            <label class="control-label" for="fileInput">Evidence file</label>
-            <div class="controls">
-              <input class="input-file" id="fileInput" type="file">
-            </div>
-            <div class="controls">
-              <label class="checkbox">
-                <input type="checkbox" id="unallocatedCb" value="unallocated">
-                Index unallocated clusters
-              </label>
-              <label class="checkbox">
-                <input type="checkbox" id="archivesCb" value="archives">
-                Index file archives
-              </label>
-              <label class="checkbox">
-                <input type="checkbox" id="emailCb" value="email">
-                Index email
-              </label>
-            </div>
-            </div>
-            </fieldset>
-          </form>
+            <label>Comment</label>
+            <textarea type="text" name="commentText" class="span12" id="commentText"></textarea>
         </div>
         <div class="modal-footer">
-          <a href="#" class="btn btn-primary">Index</a>
-          <a href="#" class="btn">Cancel</a>
+            <a href="#" class="btn" data-dismiss="modal">Cancel</a>
+            <a href="#" class="btn btn-primary" id="bookmarkOkButton">OK</a>
         </div>
-      </div>
+    </div>
 
-    </div> <!-- /main column -->
-  </div>
+    <!-- index evidence form -->
+    <div class="modal hide" id="indexEvidence" tabindex="-1">
+        <div class="modal-header">
+            <a class="close" data-dismiss="modal">×</a>
+            <h3>Index Evidence</h3>
+            <p>Index an evidence file for searching and analysis.</p>
+        </div>
+        <div class="modal-body">
+            <form class="form-inline">
+                <fieldset>
+                    <div class="control-group">
+                        <label class="control-label" for="fileInput">Evidence file</label>
+                        <div class="controls">
+                            <input class="input-file" id="fileInput" type="file">
+                        </div>
+                        <div class="controls">
+                            <label class="checkbox">
+                                <input type="checkbox" id="unallocatedCb" value="unallocated">
+                                Index unallocated clusters
+                            </label>
+                            <label class="checkbox">
+                                <input type="checkbox" id="archivesCb" value="archives">
+                                Index file archives
+                            </label>
+                            <label class="checkbox">
+                                <input type="checkbox" id="emailCb" value="email">
+                                Index email
+                            </label>
+                        </div>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <a href="#" class="btn btn-primary">Index</a>
+            <a href="#" class="btn">Cancel</a>
+        </div>
+    </div>
 
-  </div> <!-- /container -->
+</div> <!-- /main column -->
+</div>
 
-  </div>
+</div> <!-- /container -->
 
-    <!-- javascript -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!-- These MUST be placed in the following order -->
-    <script src="jquery-1.8.3.min.js"></script>
-    <script src="d3.v2.js"></script>
-    <script src="DataTables-1.9.4/media/js/jquery.dataTables.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="DT_bootstrap.js"></script>
+</div>
+
+<!-- javascript -->
+<!-- Placed at the end of the document so the pages load faster -->
+<!-- These MUST be placed in the following order -->
+
+<script src="jquery-1.8.3.min.js"></script>
+<script src="d3.v2.js"></script>
+<script src="DataTables-1.9.4/media/js/jquery.dataTables.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="DT_bootstrap.js"></script>
 <!--    <script src="numeric-1.2.6.min.js"></script>-->
 
 <!--    <script type="text/javascript" src="data.json"></script>-->
-    <script type="text/javascript" src="sifter.js"></script>
+<script type="text/javascript" src="sifter.js"></script>
 </body>
 </html>
